tests/NormalTests/paczka2/big_fuzzy/56414365.err
Error in line 8: xf8FHc S730 58,3
Error in line 23: S795 S795 25,0
Error in line 19: s17g5KcsznN A505 52,3
Error in line 30: s17g5KcsznN S730 18,1
Error in line 33: VWzC A320 96,93
Error in line 37: KY07 A505 1,7
Error in line 57: VWzC A505 116,4
Error in line 65: S795 A505 20,0
Error in line 69: U4YLWQp S795 92,1
Error in line 73: S795 S730 74,9
Error in line 91: VWzC S730 48,0
Error in line 105: S795 A505 6,1
Error in line 117: U4YLWQp A320 -3,0
Error in line 120: lYxQEf9 A32y 51,7
Error in line 116: lYxQEf9 A505 22,0
Error in line 125: S795 A320 19,1
Error in line 122: lYxQEf9 A320 144,2
Error in line 113: U4YLWQp A320 75,9
Error in line 141: U4YLWQp S730 84,1
Error in line 135: VWzC S730 87,3
Error in line 147: s17g5KcsznN A505 45,1
Error in line 149: xf8FHc S795 21,8
Error in line 140: S795 A320 41,3
Error in line 159: S795 S730 77,2
Error in line 160: s17g5KcsznN S730 174,5
Error in line 172: S795 A320 287,0
Error in line 173: S795 S730 40,1
Error in line 171: xf8FHc A320 34,9
Error in line 169: lYxQEf9 A320 278,6
Error in line 176: s17g5KcsznN S730 27,6
Error in line 154: KY07 A505 84,3
Error in line 185: xf8FHc S730 1,8
Error in line 188: VWzC S795 20,7
Error in line 192: VWzC A505 143,18
Error in line 189: VWzC A505 49,4
Error in line 187: xf8FHc S795 48,4
Error in line 202: xf8FHc A320 27,4
Error in line 214: lYxQEf9 S795 29,5
Error in line 215: U4YLWQp S730 18,4
Error in line 218: U4YLWQp A320 56,8
Error in line 217: lYxQEf9 A505 21,1
Error in line 211: S795 A505 14,4
Error in line 226: U4YLWQp S795 24,6
Error in line 228: VWzC S730 40,6
